# construction-diff

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.ipynb
src/construction_diff/: __init__.py  cli.py  diff.py  loader.py  progress_chart.py  registration.py  timeline.py  visualization.py
src/construction_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_diff.py  test_loader.py  test_progress_chart.py  test_registration.py  test_timeline.py
